i will be so eexcited when this finally works. first commit

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 this is the first little program I am making entirely on my own without following any sort of tutorial or instructions from a class, etc.
 
-I got inspired to just try this out because the other night my friends and I entertained ourselves trying to guess and subsequently quizzing each other to recite the words that represent the letters of the alphabet phonetically.
+I got inspired to just try this out because the other night my friends and I entertained ourselves trying to guess and subsequently quizzing each other to recite the words from the phonetic alphabet (alpha, bravo, charlie, etc.).
 
 I want to make it so that I can enter a word, and later an entire message, and have the phonetic alphabet representation for the word (and later the message).
 
-That's all! I am trying to figure it out as much as possible on my own!
+That's all!
